kubernetes/db-deployment.yml
#Postgres deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers: 
      - name: postgres
        image: postgres:15-alpine
        ports: 
        - containerPort: 5432
          name: postgres
        volumeMounts: 
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {}
