kubernetes/vote-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: result
        image: dockersamples/examplevotingapp_vote:latest
        ports:
        - containerPort: 80
          name: vote
