kubernetes/worker-deployment.yml
#Voting app deployment using kubernetes
#database, redis, worker, web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers: 
      - name: worker
        image: dockersamples/examplevotingapp_worker:latest
