kubernetes/db-service.yml
#A service file

---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
    - name: "db-service"
      port: 5432
      targetPort: 5432
