kubernetes/redis-service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - name: "redis-service"
      port: 6379
      targetPort: 6379
