kubernetes/result-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  selector:
    app: result
  type: NodePort
  ports:
    - name: "result-service"
      port: 5001
      targetPort: 80
